# PenArt_Reservation

./: .env  Dockerfile  Makefile  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config,py  config.py  db.py  extensions.py  models.py  views.py
app/api/: __init__.py  auth.py  health.py  me.py  uploads.py
app/api/admin/: auth.py  availability.py  bookings.py  classes.py  gallery.py  goods.py  metrics.py  news.py  order.py  reviews.py  search.py  settings.py
app/api/bookings/: bookings.py
app/api/orders/: orders.py
app/api/public/: availability.py  classes.py  gallery.py  goods.py  news.py  studio.py
app/attendance/: routes.py  service.py
app/auth/: routes.py  service.py
app/core/: constants.py
app/jobs/: job_auto_complete.py  job_metrics_rollup.py  job_order_expire.py  job_reminder.py  job_stale_cleanup.py  scheduler.py
app/middleware/: auth.py  errors.py  i18n.py
app/models/: audit_log.py  availability.py  base.py  booking.py  goods.py  job_locks.py  metrics_rollup.py  notifications_log.py  order.py  review.py  sercive.py  service.py  studio.py  user.py  work.py
app/policies/: rules.py
app/repositories/: audit_log.py  availability.py  booking.py  common.py  goods.py  metrics.py  order.py  review.py  search.py  sercive.py.bak  service.py  work.py
app/reservations/: routes.py  service.py
app/schedule/: routes.py
app/services/: admin_service.py  auth_service.py  availability_service.py  booking_service.py  classes_service.py  goods_service.py  i18n_service.py  metrics_service.py  notify_service.py  order_service.py  review_service.py  studio_service.py  upload_service.py
app/static/css/: base.css
app/static/i18n/: messages.en.json
app/static/js/: app.js
app/templates/: layout.html
app/templates/admin/: booking_canceled_ko.html  booking_confirm.en.html  booking_confirm_ko.html  booking_drawer.html  booking_reminder_en.html  bookings_list.html  calendar.html  class_edit.html  class_list.html  dashboard.html  gallery_edit.html  gallery_list.html  goods_edit.html  goods_list.html  layout.html  login.html  metrics.html  news_edit.html  news_list.html  order_created_ko.html  order_detail.html  order_paid_en.html  order_paid_ko.html  orders_list.html  review_moderate.html  reviews_list.html  settings.html
app/templates/auth/: login.html  signup.html
app/templates/auth/schedule/: week.html
app/templates/macros/: forms.html  pagination.html
app/templates/public/: booking_done.html  booking_info_terms.html  booking_select_date.html  booking_select_service.html  booking_select_time.html  classes_detail.html  classes_list.html  error_404.html  error_5xx.html  gallery_detail.html  gallery_list.html  goods_detail.html  goods_list.html  home.html  lang-switcher.html  news_detail.html  news_list.html  policy_privacy.html  policy_terms.html  studio.html
app/templates/schedule/: week.html
app/ui/: routes.py
app/utils/: pagination.py  phone.py  rate_limit.py  responses.py  security.py  slug.py  time.py  upload.py  validation.py
backup/app/: models.py
backups/backup/: requirements.txt
backups/backup_20250924/: .env  Dockerfile  pyproject.toml
backups/backup_20250924/app/: config.py
backups/backup_20250924/app/i18n/: messages.ko.json
backups/backup_20250924/app/middleware/: auth.py
backups/backup_20250924/app/models/: availability.py  base.py  goods.py  order.py  user.py  work.py
backups/backup_20250924/app/repositories/: audit_log.py  booking.py
backups/backup_20250924/app/utils/: rate_limit.py  security.py
backups/backup_20250924/scripts/: init_replicaset.js
backups/backup_250830/: requirements.txt
backups/backup_250830/app/attendance/: service.py
backups/backup_250830/app/auth/: routes.py
backups/backup_250830/app/reservations/: routes.py  service.py
backups/backup_250830/app/schedule/: routes.py  service.py
backups/backup_250830/app/templates/auth/: login.html
backups/backup_250830/scripts/: dev_seed.py
backups/backup_250830/tests/: test_policies.py  test_roles.py
backups/backup_250903/: .env  requirements.txt
nginx/: nginx.conf
notifications/templates/email/: booking_canceled_en.html  booking_reminder_ko.html  order_created_en.html  order_expired_en.html  order_expired_ko.html
notifications/templates/kakao/: booking_reminder_ko.json  order_creaetd_ko.json
notifications/templates/sms/: booking_reminder_ko.txt  order_awaiting_deposit_ko.txt
openapi/: penart.yaml
scripts/: create_indexes.py  dev_seed.py  init_replicaset.js  seed_slots.py
static/js/: i18n.js  my_bookings.js  my_orders.js  my_profile.js  public.gallery.js  public_availability.js  public_bookings.js  public_classes.js  public_goods.js  public_home.js  public_news.js  util.js
static/js/admin/: availability.js  bookings.js  calendar.js  classes.js  gallery.js  goods.js  index.js  news.js  orders.js  reviews.js  setting_metrics.js
tests/: conftest.py  test_admin_metrics.py  test_admin_search.py  test_auth_flow.py  test_availability.py  test_availability_base_days_rollover.py  test_booking_conflicts.py  test_booking_state.py  test_goods_stock.py  test_i18n.py  test_order_flow.py  test_policies.py  test_reservations.py  test_schedule.py
