[tool.poetry]
name = "penart"
version = "0.1.0"
description = "Pen Art"
authors = ["Pen Art"]
readme = "README.md"
packages = [{ include = "app" }, { include = "scripts" }, { include = "openapi" }, { include = "docs" }]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
Flask = ">=3.0,<3.1"
flask-cors = ">=4.0,<5.0"
pymongo = ">=4.7,<5.0"
APScheduler = ">=3.10,<4.0"
python-dotenv = ">=1.0,<2.0"
Babel = ">=2.15,<3.0"
pydantic = ">=2.8,<3.0"
email-validator = ">=2.1,<3.0"
gunicorn = ">=21.2,<22.0"
PyYAML = ">=6.0,<7.0"
tzdata = ">=2024.1" # for Windows/containers
Pillow = ">=10.3,<11.0"
bleach = ">=6.1,<7.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.4,<25.0"
ruff = ">=0.5.0,<0.7.0"
mypy = ">=1.10,<2.0"
ipython = ">=8.25,<9.0"
types-PyYAML = ">=6.0,<7.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.2,<9.0"
pytest-cov = ">=5.0,<6.0"
freezegun = ">=1.5,<2.0"
faker = ">=26.0,<27.0"

[tool.poetry.scripts]
penart-manage = "scripts.manage:main"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
"E","F","W", # pycodestyle/pyflakes
"I", # isort
"B", # flake8-bugbear
"UP", # pyupgrade
"ASYNC", # async rules
"C4", # comprehensions
"SIM", # simplify
"RUF", # ruff-specific
]
ignore = ["E203"] # black compatibility

[tool.ruff.lint.isort]
known-first-party = ["app", "scripts"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=app --cov=scripts --cov-report=term-missing"
filterwarnings = [
"ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"